--- a/src/css/theme.less
+++ b/src/css/theme.less
@@ -818,8 +818,10 @@ header{
                     padding: 0;
                     font-size: 16px;
                     .hot-item{
-                        padding: 5px 25px;
+                        padding: 5px 10px;
                         a{
+                            font-weight: 600;
+                            font-size: 14px;
                             color:black;
                             overflow : hidden;
                              text-overflow: ellipsis;
