--- a/src/publicCSS/theme.css
+++ b/src/publicCSS/theme.css
@@ -99,6 +99,22 @@ header .center .header-menu-ph {
   position: relative;
   width: 100%;
 }
+.wrap .center #main-left .blog-panel {
+  margin: 0 auto;
+  width: 120px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 15px;
+  color: white;
+  border-radius: 20px;
+  background-color: #fcc000;
+}
+.wrap .center #main-left .blog-panel a {
+  color: white;
+  font-weight: 600;
+}
 .wrap .center #main-left .blog-item {
   background-color: rgba(255, 255, 255, 0.8);
   margin: 20px 0;
